--- a/style.css
+++ b/style.css
@@ -289,6 +289,9 @@ body{
     .slider{
         width: 350px;
     }
+    .sidemenu-active{
+        width: 100%;
+    }
     .slider-content{
         width: 90%;
     }
