--- a/style.css
+++ b/style.css
@@ -8,6 +8,8 @@
 body{
     font-family: "Poppins", sans-serif;
     background-color: whitesmoke;
+    height: auto;
+    background-image: linear-gradient(to right,rgba(0, 201, 0, 0.471),rgba(41, 113, 17, 0.599));
 }
 .fcc{
     display: flex;
@@ -25,8 +27,9 @@ body{
 .header{
     position: fixed;
     z-index: 100;
-    background-color: aliceblue;
-    width: 100vw;
+    color: #fff;
+    background-image: linear-gradient(to right,rgb(0, 201, 0),rgb(41, 113, 17));
+    width: 100%;
     border-bottom: 1px solid grey;
     height: 60px;
     justify-content: space-between;
@@ -39,13 +42,15 @@ body{
     font-weight: 550;
 }
 .right-nav{
-    color: rgb(57, 56, 56);
+    color: #fff;
+
     gap: 20px;
     margin-right: 20px;
 }
 .logo{
     font-size: 20px;
-    color: rgb(73, 71, 71);
+    color: #fff;
+
     font-weight: 500;
 
 }
@@ -54,22 +59,24 @@ body{
 }
 .nav-bar{
     gap: 20px;
-    color: rgb(90, 87, 87);
+    color: #fff;
+
     margin: 5px;
 }
 .nav-li{
     list-style: none;
     transition: .2s;
     padding: 5px 5px;
+    cursor: pointer;
     border-radius: 8px;
     border-bottom: 4px solid transparent
 }
 .nav-active{
-    color: rgb(26, 145, 3);
-    border-bottom: 4px solid rgb(26, 159, 0);
+    color: #000;
+    border-bottom: 4px solid rgb(14, 77, 2);
 }
 .nav-li:hover{
-    border-bottom: 4px solid rgb(70, 251, 34);
+    border-bottom: 4px solid #000;
     transform: scale(1.1);
 }
 .logo-image img{
@@ -79,10 +86,39 @@ body{
 
 /* container */
 
+.container{
+    flex-direction: column;
+    padding-top: 80px;
+    height: auto;
+}
+.main-subnav{
+    width: 1000px;
+}
+.subnav{
+    display: flex;
+    /* gap: 20px; */
+    /* justify-content: space-around; */
+    width: 100%;
+}
+.subnav li{
+    cursor: pointer;
+    color: #000;
+    font-weight: 500;
+    list-style: none;
+    border-radius: 5px;
+    padding: 0 14px;
+    transition: .4s;
+    border-bottom: 3px solid transparent;
+}
+.subnav li:hover{
+    border-bottom: 3px solid green;
+    /* color: black; */
+    transform: scale(1.1);
+}
+
 .slider-div{
-    width: 100vw;
+    width: 100%;
     height: 300px;
-    margin-top: 80px;
 }
 .slider{
     display: flex;
@@ -92,6 +128,7 @@ body{
 .slider-item{
     display: none;
     /* background-color: rgb(13, 255, 0); */
+    box-shadow: 0px 0px 10px 5px rgba(38, 51, 38, 0.612);
     background-image: linear-gradient(to right,rgb(41, 113, 17),  rgb(0, 201, 0));
     width: 1000px;
     border-radius: 5px;
@@ -111,15 +148,6 @@ body{
     width: auto;
     border-radius: 7px;
 }
-/* .item-1{
-    background-color: rgb(3, 138, 255);
-}
-.item-2{
-    background-color: rgb(13, 255, 0);
-}
-.item-3{
-    background-color: yellow;
-} */
 .active{
     display: flex;
     justify-content: space-evenly;
@@ -154,11 +182,11 @@ body{
     cursor: pointer;
     width: 10px;
     height: 10px;
-    background-color: rgb(251, 255, 255);
+    background-color: rgba(251, 255, 255, 0.422);
     border-radius: 50%;
 }
 .slider-btn:hover{
-    background-color: rgb(148, 144, 139) ;
+    background-color: rgba(148, 144, 139, 0.438) ;
 }
 .slider-left-btn{
     transform: translateX(-50%);
@@ -170,6 +198,7 @@ body{
     display: flex;
     justify-content: space-between;
     margin: 0 25px;
+    border-bottom: 1px solid green;
     height: 90px;
     align-items: center;
 }
@@ -185,15 +214,16 @@ body{
 }
 .sidemenu-logo-name{
     text-wrap: nowrap;
+    color: #000;
 }
 .sidemenu-nav{
     height: 100vh;
     position: fixed;
-    z-index: 101;
+    z-index: 100;
     flex-direction: column;
     width: 0;
     overflow: hidden;
-    background-color: #ffffff;
+    background-color: lightgreen;
     transition: .5s;
     /* display: none; */
 }
@@ -202,22 +232,64 @@ body{
     margin-top: 40px;
     flex-direction: column;
 }
-.games-lists{
-    width: 100%;
-    height: 300px;
-}
-.game-div{
-    width: 100px;
-    height: 100px;
-    background-color: yellow;
-}
 .sidemenu-active{
     width: 70%;
 }
-
-
-
-
+.games-section{
+    flex-direction: column;
+    width: 1000px;
+    margin-bottom: 100px;
+    margin-top: 20px;
+    height: auto;
+    /* flex-wrap: nowrap; */
+}
+.game-lists{
+    min-width: 100%;
+    height: auto;
+    padding-bottom: 20px;
+    flex-wrap: wrap;
+    gap: 30px;
+    overflow: hidden;
+}
+.game-div{
+    width: 300px;
+    border: none;
+    box-shadow: 2px 2px 5px 3px #00330aa0;
+    flex-direction: column;
+    border-radius: 8px;
+    height: auto;
+    min-height: 350px;
+    background-image: linear-gradient(to right,rgb(41, 113, 17),  rgb(0, 201, 0));
+}
+.games-title{
+    width: 100%;
+}
+.games-title p{
+    font-size: 20px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    width: 100%;
+    text-align: start;
+}
+.game-img-div{
+    width: 100%;
+    margin-top: 15px;
+    border-radius: 8px;
+    min-height: 70%;
+}
+.game-img-div img{
+    width: 90%;
+    height: 100%;
+    border-radius: 4px;
+}
+.game-content-div{
+    font-size: 20px;
+    text-overflow: ellipsis;
+    text-wrap: wrap;
+    width: 100%;
+    font-weight: 500;
+    margin-top: 20px;
+}
 
 
 
@@ -228,6 +300,15 @@ body{
     .slider{
         width: 700px;
         justify-content: space-between;
+    }
+    .main-subnav,.games-section{
+        width: 700px;
+    }
+    .games-section{
+        height: auto;
+    }
+    .game-lists{
+        height: auto;
     }
     .slider-img{
         width: auto;
@@ -248,17 +329,31 @@ body{
     .left-nav{
         display: none;
     }
+    .game-div{
+        height: auto;
+        width: 250px;
+        min-height: 300px;
+    }
+    /* .game-lists{
+        flex-direction: column;
+    } */
     .sidemenu{
         display: flex;
     }
     .slider-div{
         max-width: 500px;
         height: auto;
-        margin-top: 200px;
+        margin-top: 100px;
     }
     .slider{
         width: 450px;
         justify-content: space-between;
+    }
+    .main-subnav{
+        width: 450px;
+    }
+    .games-section{
+        width: 600px;
     }
     .slider-item{
         flex-direction: column;
@@ -286,8 +381,19 @@ body{
 
 
 @media all and (max-width:568px) {
-    .slider{
+    .slider,.games-section{
         width: 350px;
+    }
+    .main-subnav{
+        width: 400px;
+    }
+    .subnav{
+        display: flex;
+        justify-content: space-evenly;
+        /* gap: 10px; */
+    }
+    .subnav li{
+        padding: 0 5px;
     }
     .sidemenu-active{
         width: 100%;
@@ -303,18 +409,39 @@ body{
 
 @media all and (max-width:425px) {
     .slider{
+        width: 280px;
+    }
+    .games-section{
         width: 300px;
     }
     .slider-img{
         width: 200px;
     }
+    .main-subnav{
+        width: 300px;
+    }
     .right-nav{
         display: none;
     }
     .slider-btn{
-        /* width: 30px;
-        height: 30px; */
         padding: 15px;
         font-size: 15px;
+    }
+    .game-div{
+        width: 100px;
+        height: 150px;
+        min-height: 100px;
+    }
+    .game-img-div{
+        width: 100%;
+        margin-top: 5px;
+    }
+    .game-img-div img{
+        width: 90%;
+    }
+    .game-content-div{
+        margin-top: 0;
+        text-align: center;
+        font-size: 14px;
     }
 }
